# mrb_audio_generator_cli

./: .flake8  .gitignore  Dialogues_Level2.json  LICENSE  README.md  pyproject.toml
mrb_audio_generator_cli/: app.py  kokoro_app.py  list_voices.py
