[project]
name = "mrb_audio_generator_cli"
version = "0.1.0"
description = ""
authors = [
    { name = "mrb-sage", email = "132687830+mrb-sage@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "soundfile>=0.13.1,<0.14.0",
    "transformers>=4.44.0,<5.0.0",
    "kokoro>=0.9.2,<0.10.0"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = { version = "*", source = "pytorch" }
torchvision = { version = "*", source = "pytorch" }
torchaudio = { version = "*", source = "pytorch" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
